--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "f2e2nd_week2",
+  "homepage": "https://laxative.github.io/f2e2nd_week2/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +11,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "gh-pages": "^3.2.3",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -21,7 +23,8 @@
     "start": "react-scripts start",
     "prettier-format": "prettier --config .prettierrc 'src/' --write",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
